# crabviz

./: Cargo.toml  integration_plan.md
editors/code/: package-lock.json  package.json  tsconfig.json
editors/code/media/: export.js
editors/code/src/: command-manager.ts  custom-callgraph-manager.ts  export-templates.ts  extension.ts  generator.ts  webview.ts
editors/code/src/webview/: exporters.ts  file-saver.ts  navigation.ts
src/: generator.rs  graph.rs  graph_model.rs  lang.rs  lib.rs  test_edge_attributes.rs
src/generator/: generator_tests.rs  refcell_tests.rs  wasm.rs  wasm_tests.rs
src/graph/: dot.rs
src/lang/: jsts.rs
