[package]
name = "crabviz"
version = "0.8.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

vscode = ["wasm", "console_error_panic_hook", "web-sys"]
wasm = []

[dependencies]
wasm-bindgen = "0"
console_error_panic_hook = { version = "0", optional = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0"
serde-wasm-bindgen = "0"

web-sys = { version = "0.3", features = ["console"], optional = true }

enumset = "1"

# 使用wee_alloc作为WebAssembly的内存分配器，替代默认的dlmalloc
wee_alloc = { version = "0.4.5", optional = true }

[target."cfg(target_arch = \"wasm32\")".dependencies]
wee_alloc = "0.4.5"

# 配置WebAssembly内存分配器
[profile.release]
opt-level = "s" # 优化大小而非速度
